--- a/ReversiExe/ReversiExe.csproj
+++ b/ReversiExe/ReversiExe.csproj
@@ -58,19 +58,25 @@
     <Compile Include="ChipControl.Designer.cs">
       <DependentUpon>ChipControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="InitialForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="InitialForm.designer.cs">
+      <DependentUpon>InitialForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubmitCoordinateForm.cs">
+    <Compile Include="SubmitPositionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SubmitCoordinateForm.Designer.cs">
-      <DependentUpon>SubmitCoordinateForm.cs</DependentUpon>
+    <Compile Include="SubmitPositionForm.designer.cs">
+      <DependentUpon>SubmitPositionForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="BoardControl.resx">
       <DependentUpon>BoardControl.cs</DependentUpon>
@@ -78,8 +84,11 @@
     <EmbeddedResource Include="ChipControl.resx">
       <DependentUpon>ChipControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="InitialForm.resx">
+      <DependentUpon>InitialForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,8 +99,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SubmitCoordinateForm.resx">
-      <DependentUpon>SubmitCoordinateForm.cs</DependentUpon>
+    <EmbeddedResource Include="SubmitPositionForm.resx">
+      <DependentUpon>SubmitPositionForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
